@@ -70,10 +70,10 @@ ServerSettings::ServerSettings(TorControl *torControl)
   setDefault(SETTING_DIRPORT,       9030);
   setDefault(SETTING_NICKNAME,      "Unnamed");
   setDefault(SETTING_CONTACT,       "<your@email.com>");
-  setDefault(SETTING_BANDWIDTH_RATE,        3145728);
-  setDefault(SETTING_RELAY_BANDWIDTH_RATE,  3145728);
-  setDefault(SETTING_BANDWIDTH_BURST,       6291456);
-  setDefault(SETTING_RELAY_BANDWIDTH_BURST, 6291456);
+  setDefault(SETTING_BANDWIDTH_RATE,        5242880);
+  setDefault(SETTING_RELAY_BANDWIDTH_RATE,  5242880);
+  setDefault(SETTING_BANDWIDTH_BURST,       10485760);
+  setDefault(SETTING_RELAY_BANDWIDTH_BURST, 10485760);
   setDefault(SETTING_PUBLISH_DESCRIPTOR,    "1");
   setDefault(SETTING_EXITPOLICY,
     ExitPolicy(ExitPolicy::Default).toString());
