@@ -7,6 +7,8 @@
     supports Window transparency.
   o Use the correct icon for the "Close Stream" context menu action in the
     circuit and stream list widget.
+  o Update the default bandwidth rate and burst rate to 5MB and 10MB,
+    respectively, to match Tor's defaults.
   o Modified the Mac OS X bundle installer to set Vidalia to start
     automatically on login for the user that installed the bundle.
   o Added an Arabic translation from Ahmad Gharbeia.
